2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j10

	* New: Rewrite of fitToWindow. Now works in phpBb2 also.

	* Change: Begin modify initLanguage.

2003-11-24 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j9

	* Bugfix: Removed a blank line between a closing and opening PHP Tag.
		  This broke slideshow		

2003-11-24 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j8

	* Bugfix: Remove old sync Code.

	* Change: Synced against HEAD.

2003-11-22 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j7

	* New: Anonymous user are not longer "welcomed".

	* Change: Synced against HEAD.

2003-11-22 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j6

	* New: Handle header and footer correct.

2003-11-22 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j5

	* New: Handle SID in makeGalleryURL.

2003-11-22 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j4

	* New: Integrated code to init.php so that Gallery knows the phpBB2 user.

2003-11-20 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j3

	* New: First primitive integration works

2003-11-19 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j2

	*  Change: Sync against HEAD

****************************************************************************

2003-11-18 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j1

	* SNew: Start phpBB2 branch (again)

****************************************************************************

2003-11-22  Chris Schwerdt  <muti@afterglo.ws> 1.4.2-cvs-b30

	* Re-organized gallery_remote2.php.  Each command now has
	  its own function call instead of being compared
	  sequentially.

2003-11-22  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b29

	* Spelling corrections.

	* Improvements to shadows frame. Should this go into 1.4.1?

2003-11-20  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b28

	* Updated EZ Prints form to new API in view_photo.php.

2003-11-20  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b27

	* More tweaks to the check_versions.php text.
