@@ -1,3 +1,7 @@
+2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j11
+
+	* New: Gallery now uses phpBB2's language (only this).
+
 2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j10
 
 	* New: Rewrite of fitToWindow. Now works in phpBb2 also.
